--- a/accounts/templates/accounts/bz_update.html
+++ b/accounts/templates/accounts/bz_update.html
@@ -1,21 +1,22 @@
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Update</title>
 </head>
+
 <body>
-    <form method="post" enctype="multipart/form-data"> 
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset>
-         {{bform|crispy}}
+            {{bform|crispy}}
         </fieldset>
-    <button type="submit">Submit</button>
-
+        <button type="submit">Submit</button>
     </form>
-
 </body>
+
 </html>
