--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -1,7 +1,71 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
-<div class="alert alert-info">
-    Your password has been set.
-</div>
-<a href="{% url 'login' %}">Sign In Here</a>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reset Password</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
+
+    <style>
+        :root {
+            --color-orange-500: rgb(255, 163, 93);
+            --color-orange-400: rgb(255, 140, 51);
+            --color-gray: rgb(145, 145, 145);
+        }
+
+        body {
+            height: 100vh;
+            width: 100%;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: auto;
+            height: 90vh;
+        }
+
+        img {
+            width: 500px;
+        }
+
+
+        #map {
+            min-height: 80vh;
+        }
+
+        .btn {
+            background-color: var(--color-orange-500);
+            border: none;
+        }
+
+        .btn:hover,
+        .btn:focus,
+        .btn:active {
+            background-color: var(--color-orange-400) !important;
+            border: none !important;
+            box-shadow: none !important;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <img src="{%static 'images/success.png'%}">
+        <p class="fs-2 mt-4">Your password has been set.</p>
+        <a class="btn btn-secondary mt-2" href="{% url 'login' %}">Login here</a>
+    </div>
+</body>
+
 </html>
