--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -1,6 +1,47 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
-<div class="alert alert-info">
-    An email has been sent with instructions to reset your password
-</div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reset Password</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
+
+    <style>
+        body {
+            height: 100vh;
+            widthL 100%;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: auto;
+            height: 90vh;
+        }
+
+        img {
+            width: 500px;
+
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <img src="{%static 'images/mail_sent_1.png'%}">
+        <p class="fs-2 mt-5">An email has been sent with instructions to reset your password.</p>
+    </div>
+</body>
+
 </html>
