--- a/accounts/templates/accounts/review_form.html
+++ b/accounts/templates/accounts/review_form.html
@@ -1,16 +1,81 @@
 {% load crispy_forms_tags %}
+{% load static %}
 <!DOCTYPE html>
 <html>
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Review update</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Update</button>
-            </div>
-        </form>
-    </div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Update Success</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
+    <style>
+        :root {
+            --color-orange-500: rgb(255, 163, 93);
+            --color-orange-400: rgb(255, 140, 51);
+            --color-gray: rgb(145, 145, 145);
+        }
+
+        body {
+            height: 100vh;
+            width: 100%;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: auto;
+            height: 90vh;
+        }
+
+        img {
+            width: 500px;
+        }
+
+        #map {
+            min-height: 80vh;
+        }
+
+        .btn {
+            background-color: var(--color-orange-500);
+            border: none;
+            color: white;
+        }
+
+        .btn:hover,
+        .btn:focus,
+        .btn:active {
+            background-color: var(--color-orange-400) !important;
+            border: none !important;
+            box-shadow: none !important;
+            color: white !important;
+        }
+
+        textarea:focus {
+            outline: none;
+            box-shadow: none !important;
+        }
+    </style>
+</head>
+<div class="container">
+    <img src="{%static 'images/reviews.png'%}">
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            {{ form|crispy }}
+        </fieldset>
+        <div class="form-group mt-3">
+            <button class="btn" type="submit">Update</button>
+        </div>
+    </form>
+</div>
+
 </html>
