--- a/static/css/location.css
+++ b/static/css/location.css
@@ -21,6 +21,12 @@ h2 {
   width: 100%;
   padding-bottom: 50px;
 }
+.alert {
+  color: var(--color-orange-500);
+  font-size: 25px;
+  margin: 0px !important;
+  padding: 0px !important;
+}
 
 .form-section {
   background-color: aliceblue;
