--- a/static/css/login.css
+++ b/static/css/login.css
@@ -95,6 +95,13 @@ input[type="checkbox"] {
   background-color: #f5f5f5 !important;
 }
 
+input[type="email"] {
+  background-color: #f5f5f5 !important;
+  border: none;
+  font-size: 30px !important;
+  padding: 10px;
+}
+
 .input-group-text {
   background: rgb(255, 255, 255);
   color: black;
