--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,14 +1,4 @@
 <style>
-    .about-btn a {
-        text-decoration: none;
-        color: black;
-
-    }
-
-    .about-btn a:hover {
-        color: #808080 !important;
-    }
-
     nav {
         display: flex;
         flex-direction: row;
@@ -17,6 +7,10 @@
         padding: 10px 20px;
         background-color: #f5f5f5;
         width: 100%;
+    }
+
+    .about-btn {
+        margin-left: 20px;
     }
 
     .btns {
@@ -29,6 +23,13 @@
 
     .btns p {
         margin: 0px;
+    }
+
+    .logo {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
 
     .logo a {
@@ -56,7 +57,13 @@
 <nav>
     <div class="logo"><a href="{% url 'index' %}" text>
             <h1>StudyCity</h1>
-        </a></div>
+        </a>
+        <div class="about-btn">
+            <a class="btn btn-outline-secondary" href="{% url 'about' %}">
+                About
+            </a>
+        </div>
+    </div>
 
     <div class="btns">
         {% if user.is_authenticated %}
@@ -90,11 +97,7 @@
         </a>
 
         {% endif %}
-        <div class="about-btn">
-            <a href="{% url 'about' %}">
-                About
-            </a>
-        </div>
+
         {% comment %} <a href={% url 'index' %}>Search</a> {% endcomment %}
     </div>
 </nav>
