added team pics, added tooltips on labels

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -61,8 +61,9 @@
               </div>
             </form>
           </div>
-
-          {{form.errors}}
+          <div class="text-center mt-3">
+            {{form.errors}}
+          </div>
 
           <div class="mt-4">
             <div class="d-flex justify-content-center links">
