--- a/accounts/templates/accounts/about.html
+++ b/accounts/templates/accounts/about.html
@@ -63,7 +63,7 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
                 <div class="col member">
                     <div class="member-card">
-                        <img class="rounded-circle" src="{% static 'images/avatar.jpg' %}" alt="">
+                        <img class="rounded-circle" src="{% static 'images/scott.JPG' %}" alt="">
                         <div class="member-name mt-3">
                             <h3>Scott Canning</h3>
                             <div class="social-icons">
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col member">
                     <div class="member-card">
-                        <img class="rounded-circle" src="{% static 'images/avatar.jpg' %}" alt="">
+                        <img class="rounded-circle" src="{% static 'images/kathy.JPG' %}" alt="">
                         <div class="member-name mt-3">
                             <h3>Kathy Ching</h3>
                             <div class="social-icons">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col member">
                     <div class="member-card">
-                        <img class="rounded-circle" src="{% static 'images/avatar.jpg' %}" alt="">
+                        <img class="rounded-circle" src="{% static 'images/simran.jpg' %}" alt="">
                         <div class="member-name mt-3">
                             <h3>Simran Shandilya</h3>
                             <div class="social-icons">
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col member">
                     <div class="member-card">
-                        <img class="rounded-circle" src="{% static 'images/avatar.jpg' %}" alt="">
+                        <img class="rounded-circle" src="{% static 'images/leo.JPG' %}" alt="">
                         <div class="member-name mt-3">
                             <h3>Leo Wang</h3>
                             <div class="social-icons">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col member">
                     <div class="member-card mt-3">
-                        <img class="rounded-circle" src="{% static 'images/avatar.jpg' %}" alt="">
+                        <img class="rounded-circle" src="{% static 'images/hang.jpg' %}" alt="">
                         <div class="member-name mt-3">
                             <h3>Hang Zhang </h3>
                             <div class="social-icons">
