--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -386,7 +386,11 @@
           <div class="card m-auto headline" style="width: 18rem">
             <img class="card-image-top" src="{{ data.image_url }}" alt="Card image cap" />
             <div class="card-body">
-              <h5 class="card-title">{{data.label}}. {{ data.name }}</h5>
+              <h5 class="card-title">
+                <p class="data-label" type="button" data-bs-toggle="tooltip" data-bs-placement="top"
+                  title="This correspond to the label on map">
+                  {{data.label}}</p>{{ data.name }}
+              </h5>
               <p class="card-text my-0">Phone: {{ data.phone }}</p>
               <p class="card-text my-0">Rating: {{ data.rating }}</p>
               <p class="card-text my-0">Price Range: {{ data.price }}</p>
@@ -450,6 +454,10 @@
   <script src="https://maps.googleapis.com/maps/api/js?key={{google}}&callback=initMap&v=weekly" async></script>
   <script>
     ScrollReveal().reveal('.headline');
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
   </script>
 </body>
 
