--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -47,21 +47,34 @@
 
                 <input type="password" name="password" placeholder="Password" class="form-control" />
               </div>
-
-              <div class="d-flex justify-content-center mt-5 login_container">
+              <div class="text-center">
+                {% if form.errors %}
+                <p>Username or password not correct</p>
+                {% endif %}
+              </div>
+              <div class="d-flex justify-content-center mt-3 login_container">
                 <input class="btn login_btn" type="submit" value="Login" />
               </div>
             </form>
           </div>
 
-          {% for message in messages %}
-          <p id="messages">{{message}}</p>
-          {% endfor %}
 
           <div class="mt-4">
             <div class="d-flex justify-content-center links">
               Don't have an account?
               <a href="{% url 'register' %}" class="ms-1">Sign Up</a>
+            </div>
+          </div>
+          <div class="mt-3">
+            <div class="d-flex justify-content-center links">
+              Forgot your password?
+              <a href="{% url 'password_reset' %}" class="ms-1">Reset Password</a>
+            </div>
+          </div>
+          <div class="mt-3">
+            <div class="d-flex justify-content-center links">
+              Not ready yet?
+              <a href="{% url 'index' %}" class="ms-1">Back to Homepage</a>
             </div>
           </div>
         </div>
