--- a/static/css/about.css
+++ b/static/css/about.css
@@ -30,21 +30,26 @@ body {
   height: 100%;
   max-width: 150px;
 }
+.member-name h3 {
+  font-size: 1.5rem;
+  margin: 10px 0px;
+}
 .member-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--color-gray);
+  /* border: 1px solid var(--color-gray); */
   /* width: 250px; */
   margin: 20px auto;
   border-radius: 8px;
   padding: 20px;
-}
-.member-card:hover {
-  border: white solid 1px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
+/* .member-card:hover {
+  border: white solid 1px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+} */
 .banner-img {
   height: 400px;
 }
