--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,6 +12,14 @@ body {
 #map {
   min-height: 80vh;
 }
+.data-label {
+  display: inline-block;
+  background-color: #f5f5f5;
+  padding: 5px 10px;
+  border-radius: 8px;
+  margin-right: 10px;
+  font-weight: 600;
+}
 .card-body .btn {
   background-color: var(--color-orange-500);
   border: none;
