--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -18,6 +18,8 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 
+    <!-- <script src="{% static 'js/location_detail.js' %}"> </script> -->
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
@@ -206,7 +208,19 @@
            
                                 <input type="hidden" name="locationid" value="{{ locationID }}" />
                                 <input type="hidden" name="locationname" value="{{ business.name }}" />
-                                <input class="btn btn-primary" type="submit" />
+
+                                <input class="btn btn-primary" type="submit"/>
+                            <!-- {% for review in reviews %}
+                                {% if user == review.user %}
+                                <input class="btn btn-primary" type="submit" 
+                                onclick="validateExistingReview()" id="overridingReview" />
+
+                                {% else %}
+
+                                <input class="btn btn-primary" type="submit"/>
+
+                                {%endif%}
+                            {% endfor %}     -->
                             </div>
                         </form>
                     </div>
