--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -72,6 +72,9 @@
                         {% endfor %}
                 </ul>
                 {% endif %}
+                <a href={% url 'create_checkout_session' %}>
+                    <div class="btn">Buy ad</div>
+                </a>
             </div>
             <div class="image-button-wrapper fade-in animation-dealy-3">
                 <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#imageModal">
