--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -58,6 +58,9 @@
             </form>
           </div>
 
+          {% for message in messages %}
+          <p id="messages">{{message}}</p>
+          {% endfor %}
 
           <div class="mt-4">
             <div class="d-flex justify-content-center links">
