--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -29,7 +29,7 @@
                 {% if messages %}
                 <ul class="messages">
                     {% for message in messages %}
-                    <div class="alert alert-primary mt-2" role="alert">
+                    <div class="alert" role="alert">
                         {{ message }}
                     </div>
                     {% endfor %}
