--- a/templates/nav.html
+++ b/templates/nav.html
@@ -63,6 +63,7 @@
                 About
             </a>
         </div>
+
     </div>
 
     <div class="btns">
@@ -74,6 +75,11 @@
         <a href="{% url 'profile' %}" class="">
             <button class="btn btn-secondary">
                 Profile
+            </button>
+        </a>
+        <a href="{% url 'advertise' %}" class="">
+            <button class="btn btn-secondary">
+                Advertise
             </button>
         </a>
         <a href="{% url 'logout' %}">
