--- a/accounts/templates/accounts/advertise.html
+++ b/accounts/templates/accounts/advertise.html
@@ -30,7 +30,11 @@
                     <h3>Day Plan</h3>
                     <h2>$9.9</h2>
                     <input type="hidden" name="plan" value="1" />
+                    {% if not is_business or not is_verified%}
+                    <input class="buy-btn" type="submit" value="Buy Now" disabled>
+                    {% else %}
                     <input class="buy-btn" type="submit" value="Buy Now">
+                    {% endif %}
                 </form>
             </div>
             <div class="price text-center">
@@ -39,7 +43,11 @@
                     <h3>Monthly Plan</h3>
                     <h2>$49.9</h2>
                     <input type="hidden" name="plan" value="2" />
+                    {% if not is_business or not is_verified%}
+                    <input class="buy-btn" type="submit" value="Buy Now" disabled>
+                    {% else %}
                     <input class="buy-btn" type="submit" value="Buy Now">
+                    {% endif %}
                 </form>
             </div>
             <div class="price text-center">
@@ -48,13 +56,21 @@
                     <h3>Yearly Plan</h3>
                     <h2>$99.9</h2>
                     <input type="hidden" name="plan" value="3" />
+                    {% if not is_business or not is_verified%}
+                    <input class="buy-btn" type="submit" value="Buy Now" disabled>
+                    {% else %}
                     <input class="buy-btn" type="submit" value="Buy Now">
+                    {% endif %}
                 </form>
             </div>
 
         </div>
-
-    </div>
+        {% if not is_business or not is_verified%}
+        <div class="alert mt-3" role="alert">
+            <p>You need to be a verified business to advertise on our website.
+            </p>
+        </div>
+        {% endif %}
 </body>
 
 </html>
