--- a/accounts/templates/accounts/about.html
+++ b/accounts/templates/accounts/about.html
@@ -134,7 +134,7 @@
             <h1 class=""> Made possible by</h1>
         </div>
         <div class="container brands">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-6">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
                 <div class="col brand">
                     <img src="{% static 'images/nyu.jpeg' %}" alt="">
                 </div>
@@ -152,6 +152,9 @@
                 </div>
                 <div class="col brand">
                     <img src="{% static 'images/opendata.svg' %}" alt="">
+                </div>
+                <div class="col brand">
+                    <img src="{% static 'images/stripe.png' %}" alt="">
                 </div>
             </div>
         </div>
