--- a/accounts/templates/accounts/advertise.html
+++ b/accounts/templates/accounts/advertise.html
@@ -15,21 +15,22 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/advertise.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animation.css' %}">
 </head>
 
 <body>
     {% include 'nav.html'%}
-    <div class="container text-center mt-5">
-        <img class="mb-5" src="{% static 'images/patient.png' %}" />
-        <h1>Advertisement Plans</h1>
-        <h2 class="subtitle">Choose a plan that suits your needs</h2>
-        <p class="mt-5 popular"> Most Popular!</p>
+    <div class="container text-center mt-5 mb-5">
+        <img class="mb-5 fade-in animation-delay-3" src="{% static 'images/patient.png' %}" />
+        <h1 class="fade-in animation-delay-3">Advertisement Plans</h1>
+        <h2 class="subtitle fade-in animation-delay-3">Choose a plan that suits your needs</h2>
+        <p class="mt-5 popular fade-in animation-delay-3"> Most Popular!</p>
         <div class="price-section mt-2">
-            <div class="price text-center">
+            <div class="price text-center fade-in-top animation-delay-5">
                 <form method="post">
                     {% csrf_token %}
-                    <h3>Day Plan</h3>
-                    <h2>$9.9</h2>
+                    <h3>One Month</h3>
+                    <h2>$19.9</h2>
                     <input type="hidden" name="plan" value="1" />
                     {% if not is_business or not is_verified or is_promoted%}
                     <input class="buy-btn" type="submit" value="Buy Now" disabled>
@@ -38,11 +39,11 @@
                     {% endif %}
                 </form>
             </div>
-            <div class="price text-center popular-container">
+            <div class="price text-center popular-container fade-in-top animation-delay-1">
                 <form method="post">
                     {% csrf_token %}
                     <h3>Yearly Plan</h3>
-                    <p class="strike">$598.8</p>
+                    <p class="strike">$238.8</p>
                     <h2>$99.9</h2>
 
 
@@ -54,11 +55,11 @@
                     {% endif %}
                 </form>
             </div>
-            <div class="price text-center">
+            <div class="price text-center fade-in-top animation-delay-5">
                 <form method="post">
                     {% csrf_token %}
-                    <h3>Monthly Plan</h3>
-                    <h2>$49.9</h2>
+                    <h3>Three Month</h3>
+                    <h2>$39.9</h2>
                     <input type="hidden" name="plan" value="2" />
                     {% if not is_business or not is_verified or is_promoted%}
                     <input class="buy-btn" type="submit" value="Buy Now" disabled>
@@ -70,14 +71,14 @@
 
         </div>
         {% if not is_business or not is_verified%}
-        <div class="alert mt-4" role="alert">
+        <div class="alert mt-4 fade-in animation-delay-5" role="alert">
             <p>You need to be a verified business to advertise on our website.
             </p>
         </div>
         {% endif %}
         {% if is_promoted%}
-        <div class="alert mt-4" role="alert">
-            <p>Your business is already promoted.
+        <div class="alert mt-4 fade-in animation-delay-5" role="alert">
+            <p>Your advertisement will be live until {{promote_end_date}}
             </p>
         </div>
         {% endif %}
