--- a/static/css/advertise.css
+++ b/static/css/advertise.css
@@ -16,6 +16,7 @@ body {
   align-items: center;
   gap: 25px;
   margin: auto;
+  width: 100%;
 }
 .price {
   display: flex;
@@ -25,15 +26,15 @@ body {
   flex: 1;
   border-radius: 8px;
   border: 1px solid #e6e6e6;
-  padding: 50px 0px;
+  padding: 50px 30px;
 }
 .price h2 {
-  font-size: 60px;
+  font-size: 4rem;
   font-weight: 500;
   margin: 10px 0px 30px 0px;
 }
 .price h3 {
-  font-size: 25px;
+  font-size: 1.5rem;
   font-weight: 400;
   margin: 0px;
 }
@@ -87,7 +88,7 @@ body {
   font-weight: 600;
 }
 .popular-container h2 {
-  font-size: 70px;
+  font-size: 5rem;
 }
 
 .strike {
