--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -17,6 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script> 
+
 
     <script src="{% static 'js/location_detail.js' %}"> </script>
 
@@ -161,7 +163,7 @@
 
                     <div class="post-review">
                         <h2><i class="fas fa-edit me-2"></i>Post your review</h2>
-                        <form method="post">
+                        <form method="post" id="review_form">
                             {% csrf_token %}
                             <textarea placeholder="Your review..." name="review"></textarea>
                             <br />
@@ -210,30 +212,25 @@
                                 <input type="hidden" name="locationname" value="{{ business.name }}" />
                           
 
-                                {% if reviews|length == 0 %}
-                                <input class="btn btn-primary" type="submit"/>
-                                {% endif %}
-                                
+                              
+                                <!-- <input class="btn btn-primary" type="submit"/> --> -->
 
-                            {% for review in reviews %}
-                                {% if user == review.user %}
-                                <input class="btn btn-primary" type="submit" 
-                                onclick="validateExistingReview()" id="overridingReview" />
-                                
-
-                                {% else %}
-                                <input class="btn btn-primary" type="submit"/>
-                                {%endif%}
-
-                            {% endfor %}  
-
-                                
-
+        
                                
+                               {% if userReviewExists %}
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+                                onclick="$('#exampleModal').modal('show')"
+                                >
+                                    Submit
+                                  </button>
+                                {% else %}
+
+                                <input class="btn btn-primary" type="submit"/>
+                                
+                                   console.log("CHeck")
+                                  {% endif %}
 
                                  
-
-                            
                             </div>
                         </form>
                     </div>
@@ -300,6 +297,27 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="$('#exampleModal').modal('hide')">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p> This will over-write your existing review </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="$('#exampleModal').modal('hide')" >Cancel</button>
+              <button type="button" class="btn btn-primary" onclick="$('#review_form').submit();$('#exampleModal').modal('hide')">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     <script>
         /* beautify preserve:start */
         document.getElementById("comfort").innerHTML = getStars({{avg_dict.comfort_rating__avg}});
