--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -213,7 +213,7 @@
                           
 
                               
-                                <!-- <input class="btn btn-primary" type="submit"/> --> -->
+                                <!-- <input class="btn btn-primary" type="submit"/> --> 
 
         
                                
