--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -299,7 +299,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Resubmitting Review</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="$('#exampleModal').modal('hide')">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -308,8 +308,9 @@
               <p> This will over-write your existing review </p>
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="$('#review_form').submit();$('#exampleModal').modal('hide')">Save changes</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="$('#exampleModal').modal('hide')" >Cancel</button>
-              <button type="button" class="btn btn-primary" onclick="$('#review_form').submit();$('#exampleModal').modal('hide')">Save changes</button>
+              
             </div>
           </div>
         </div>
