--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script> 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -203,27 +203,26 @@
 
                                 <input type="hidden" name="locationid" value="{{ locationID }}" />
                                 <input type="hidden" name="locationname" value="{{ business.name }}" />
-                          
 
-                              
-                                <!-- <input class="btn btn-primary" type="submit"/> --> 
 
-        
-                               
-                               {% if userReviewExists %}
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
-                                onclick="$('#exampleModal').modal('show')"
-                                >
+
+                                <!-- <input class="btn btn-primary" type="submit"/> -->
+
+
+
+                                {% if userReviewExists %}
+                                <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal" onclick="$('#exampleModal').modal('show')">
                                     Submit
-                                  </button>
+                                </button>
                                 {% else %}
 
-                                <input class="btn btn-primary" type="submit"/>
-                                
-                                  
-                                  {% endif %}
+                                <input class="btn btn-primary" type="submit" />
 
-                                 
+
+                                {% endif %}
+
+
                             </div>
                         </form>
                     </div>
@@ -296,26 +295,31 @@
         </div>
     </div>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Resubmitting Review</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="$('#exampleModal').modal('hide')">
-                <span aria-hidden="true">&times;</span>
-              </button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Resubmitting Review</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                        onclick="$('#exampleModal').modal('hide')">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p> This will over-write your existing review </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary"
+                        onclick="$('#review_form').submit();$('#exampleModal').modal('hide')">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                        onclick="$('#exampleModal').modal('hide')">Cancel</button>
+
+                </div>
             </div>
-            <div class="modal-body">
-              <p> This will over-write your existing review </p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" onclick="$('#review_form').submit();$('#exampleModal').modal('hide')">Save changes</button>
-              <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="$('#exampleModal').modal('hide')" >Cancel</button>
-              
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
+
 
     <script>
         /* beautify preserve:start */
