created advertising.py to capture current advertising businesses

--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -388,7 +388,7 @@
             <div class="card-body">
               <h5 class="card-title">
                 <p class="data-label" type="button" data-bs-toggle="tooltip" data-bs-placement="top"
-                  title="This correspond to the label on map">
+                  title="Map label">
                   {{data.label}}</p>{{ data.name }}
               </h5>
               <p class="card-text my-0">Phone: {{ data.phone }}</p>
