--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,6 +20,7 @@ body {
   margin-right: 10px;
   font-weight: 600;
 }
+
 .card-body .btn {
   background-color: var(--color-orange-500);
   border: none;
@@ -31,6 +32,20 @@ body {
   border: none !important;
   box-shadow: none !important;
 }
+
+.card-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+.card-bottom p {
+  margin: 0;
+  color: var(--color-gray);
+}
+.data-label {
+  margin-bottom: 0px;
+}
+
 .external-url {
   color: var(--color-orange-500);
   text-decoration: underline;
@@ -106,6 +121,8 @@ img {
 .searchBar h1 {
   text-align: center;
   margin-bottom: 25px;
+  color: white;
+  text-shadow: 0px 3px 0px rgba(0, 0, 0, 0.1);
 }
 .searchBar #locationInput {
   width: 100%;
