--- a/accounts/templates/accounts/checkout_success.html
+++ b/accounts/templates/accounts/checkout_success.html
@@ -64,7 +64,7 @@
     <div class="container">
         <img src="{%static 'images/success.png'%}">
         <p class="fs-2 mt-4">Checkout successful</p>
-        <a class="btn btn-secondary mt-2" href="{% url 'index' %}">Go back</a>
+        <a class="btn btn-secondary mt-2" href="{% url 'advertise' %}">Go back</a>
     </div>
 </body>
 
