added claimed name on profile page

--- a/accounts/templates/accounts/business_info_update_suc.html
+++ b/accounts/templates/accounts/business_info_update_suc.html
@@ -64,9 +64,9 @@
 <body>
     <div class="container">
         <img src="{%static 'images/success.png'%}">
-        <p class="fs-3 mt-4">Your location's information has been updated successfully! Refresh the location page to see
+        <p class="fs-3 mt-4">Your location's information has been updated successfully!
+            </br>Refresh the location page to see
             the update!</p>
-
     </div>
 </body>
 
