--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -47,7 +47,8 @@
                     <div class="">
                         <h2 class="mt-3">{{ user.username }}</h2>
                         {% if user.profile.business_account and user.profile.verified %}
-                        <p class="text-secondary">Verified Business Account &#9989;</p>
+                        <p class="mb-2 text-secondary">&#9989; <strong>Claimed business: </strong></br>
+                            {{ user.profile.claimed_business_name }}</p>
                         {% elif user.profile.business_account %}
                         <p class="text-secondary">Business Account &#9989;</p>
                         {% endif %}
