--- a/accounts/templates/accounts/review_confirm_delete.html
+++ b/accounts/templates/accounts/review_confirm_delete.html
@@ -1,4 +1,5 @@
 {% load crispy_forms_tags %}
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -52,7 +53,7 @@
             <fieldset class="form-group">
                 <h2>Are you sure you want to delete your review?</h2>
             </fieldset>
-            <div class="form-group">
+            <div class="form-group text-center mt-3">
                 <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
             </div>
         </form>
