--- a/accounts/templates/accounts/review_delete_suc.html
+++ b/accounts/templates/accounts/review_delete_suc.html
@@ -44,10 +44,10 @@
 </head>
 
 <body>
-    <div class="container">
-        <img src="{%static 'images/success.png'%}">
-        <h2>Your review has been deleted. </br>
-            Refresh the location page to see the update.</h2>
+    <div class="container text-center">
+        <img class="mb-4" src="{%static 'images/success.png'%}">
+        <p class="fs-3 mt-4">Your review has been deleted. </br>
+            Refresh the location page to see the update.</p>
     </div>
 </body>
 
