--- a/accounts/templates/accounts/about.html
+++ b/accounts/templates/accounts/about.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col member">
                     <div class="member-card mt-3">
-                        <img class="rounded-circle" src="{% static 'images/hang.jpg' %}" alt="">
+                        <img class="rounded-circle" src="{% static 'images/hang.jpeg' %}" alt="">
                         <div class="member-name mt-3">
                             <h3>Hang Zhang </h3>
                             <div class="social-icons">
