--- a/accounts/templates/accounts/about.html
+++ b/accounts/templates/accounts/about.html
@@ -160,6 +160,9 @@
                 <div class="col brand">
                     <img src="{% static 'images/stripe.png' %}" alt="">
                 </div>
+                <div class="col brand">
+                    <img src="{% static 'images/sendgrid.png' %}" alt="">
+                </div>
             </div>
         </div>
 
