--- a/accounts/templates/accounts/about.html
+++ b/accounts/templates/accounts/about.html
@@ -37,23 +37,21 @@
     <div class="container text-center py-5 fade-in animation-delay-3">
         <div class="about-text">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ornare rhoncus dignissim. Interdum et
-                malesuada fames ac ante ipsum primis in faucibus. Nulla imperdiet ex at sapien tristique sollicitudin.
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin a blandit
-                ligula. Mauris nec ullamcorper eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                ornare
-                leo suscipit nunc auctor congue in eu dolor. In et nisi ut dolor tempor interdum ac at tortor. Quisque
-                pulvinar velit dapibus mauris pellentesque, ut rhoncus lacus hendrerit. Proin consectetur pellentesque
-                lectus, nec lacinia turpis. Nam vitae ante quis ex iaculis lacinia eget eu lorem. Nunc eleifend lorem
-                iaculis sem dictum maximus at nec elit. Vestibulum porta aliquam purus, vel blandit dolor porttitor sit
-                amet. Ut at ultricies quam.
-
-                Vivamus varius, urna id pellentesque faucibus, diam tellus elementum est, in gravida nunc urna ac massa.
-                In
-                congue faucibus ex, eu lobortis ligula feugiat at. Nullam vitae est nec velit dignissim dapibus. In eu
-                elementum augue. Donec id purus non est bibendum mollis. Nunc vel purus efficitur tellus cursus
-                venenatis eu
-                nec turpis. Quisque id rhoncus felis. Duis in viverra dolor. Aenean in egestas enim.
+                Inspired by the confines of a Gramercy studio and NYU dormitory life during the pandemic, StudyCity was
+                built for those seeking more tailored options to study and work throughout New York City’s five
+                boroughs. The application was designed to give users the ability to filter location-based search results
+                to their preferences using rich contextual information about local study spaces through a seamless
+                integration of data from Yelp!, user reviews and ratings, and NYC OpenData. StudyCity also supports
+                business users who wish to claim their location as a verified StudySpace and advertise in local search
+                results.
+            </p>
+            <p>
+                Our talented team came together while taking Software Engineering I at NYU’s Tandon School of
+                Engineering in Brooklyn during the Fall 2021 semester. We set out with a common vision to build a
+                unified tool for the university student, the home-based worker, the remote freelancer – and anyone else
+                looking for an inspirational space to study, read a book, write some code, or enjoy a caffeinated
+                beverage. We hope you register an account and enjoy the experience! Please feel free to check out the
+                team’s LinkedIn and GitHub profiles linked below!
             </p>
         </div>
         <div class="title mt-5">
