--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -49,7 +49,11 @@
                         <h2 class="mt-3">{{ user.username }}</h2>
                         {% if user.profile.business_account and user.profile.verified %}
                         <p class="mb-2 text-secondary">&#9989; <strong>Claimed business: </strong></br>
-                            {{ user.profile.claimed_business_name }}</p>
+                            <a class=""
+                                href="{% url 'locationDetail' %}?locationID={{ user.profile.verified_yelp_id }}">
+                                {{ user.profile.claimed_business_name }}
+                            </a>
+                        </p>
                         {% elif user.profile.business_account %}
                         <p class="text-secondary">Business Account &#9989;</p>
                         {% endif %}
